# womanizer

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
crates/womanizer-app/: Cargo.toml
crates/womanizer-app/src/: app.rs  lib.rs  main.rs  ready_shell.rs  setup_screen.rs
crates/womanizer-core/: Cargo.toml
crates/womanizer-core/src/: error_ring.rs  lib.rs  params.rs  primitives.rs  smoke.rs  wake.rs
crates/womanizer-core/tests/: no_alloc.rs  smoke.rs  voice_params_shaping.rs
crates/womanizer-db/: Cargo.toml
crates/womanizer-db/src/: lib.rs  schema.rs  seed.rs  settings.rs
crates/womanizer-db/tests/: init.rs
crates/womanizer-engine/: Cargo.toml
crates/womanizer-engine/src/: cpal_io.rs  dsp.rs  event_loop.rs  lib.rs  monitor.rs  resampler.rs  worker.rs
crates/womanizer-engine/src/devices/: macos.rs  mod.rs  windows.rs
crates/womanizer-engine/tests/: breath_alloc_smoke.rs  dsp_assert_no_alloc_loop.rs  dsp_f0_telemetry_published.rs  dsp_gate_closed_silence.rs  dsp_gate_hysteresis.rs  dsp_pitch_ratio.rs  dsp_preset_latency_budget.rs  dsp_simd_rms_parity.rs  dsp_yin_noise_unvoiced.rs  dsp_yin_sine_accuracy.rs  reconnect.rs  rt_safety.rs  shaping_chain_cpu_budget.rs  worker_chain_smoke.rs
drivers/macos-blackhole/: README.md  build.sh  install.sh
scripts/: setup-windows.ps1
