# Womanizer workspace manifest.
#
# Dependency versions are pinned ONCE here in [workspace.dependencies] and referenced
# with `workspace = true` from each member crate (D-01 layering + single-source pinning).
#
# Version-pin policy: pins are the current-latest verified on crates.io (2026-05-28),
# EXCEPT where the dependency resolver forces an older release:
#     - directories    5   -> 6    (ProjectDirs::from + data_dir() API stable across 5->6)
#     - rtrb           0.3.3 -> 0.3.4 (patch)
#   These are deliberate, not accidental drift.
#
# triple_buffer is held at 8.x: 9.0.0 moved to Rust edition 2024 and changed its API. 8.x is the
# latest release whose (Input, Output) + write/read API matches the smoke-test usage.
#
# rusqlite is held at 0.39: rusqlite_migration tops out at 2.5.0, which depends on rusqlite ^0.39
# (libsqlite3-sys 0.37). Pulling rusqlite 0.40 (libsqlite3-sys 0.38) makes two packages claim
# links="sqlite3" and the resolver rejects it. 0.39 aligns both on libsqlite3-sys 0.37.
# Revisit 0.40 when rusqlite_migration adds 0.40 support.
#
# assert_no_alloc uses features = ["warn_debug"] so the no-alloc violation test can catch the
# allocation via #[should_panic] (the default behavior aborts, which is not catchable).
#
# rusqlite carries the mandatory `bundled` feature (Pitfall 5): compiles SQLite from source so
# there is zero system dependency on Windows or macOS, preserving the single-binary promise.

[workspace]
resolver = "2"
members = [
    "crates/womanizer-core",
    "crates/womanizer-db",
    "crates/womanizer-app",
]

[workspace.dependencies]
# --- Core cross-thread plumbing (womanizer-core) ---
rtrb = "0.3.4"
triple_buffer = "8"
atomic_float = "1"
crossbeam-channel = "0.5"
assert_no_alloc = { version = "1", features = ["warn_debug"] }

# --- Persistence (womanizer-db) ---
rusqlite = { version = "0.39", features = ["bundled"] }
# Pin to 2.5 (latest): bare "2" resolves to 2.0.0 (rusqlite ^0.34); 2.5.0 depends on
# rusqlite ^0.39, matching our pin so both share libsqlite3-sys 0.37 (one links="sqlite3").
rusqlite_migration = "2.5"
directories = "6"

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Errors ---
thiserror = "2"
anyhow = "1"

# --- Logging (never from the audio callback) ---
tracing = "0.1"
tracing-subscriber = "0.3"

# --- Declared so the dep graph + license gate are real and INFRA-01 proves the ACTUAL
#     binary builds on both OSes (Open Question 2). NOT wired in Phase 0. ---
cpal = "0.17"
eframe = "0.34"
egui = "0.34"
