# Womanizer workspace manifest.
#
# Dependency versions are pinned ONCE here in [workspace.dependencies] and referenced
# with `workspace = true` from each member crate (D-01 layering + single-source pinning).
#
# Version-pin policy: pins are the current-latest verified on crates.io (2026-05-28),
# EXCEPT where the dependency resolver forces an older release:
#     - directories    5   -> 6    (ProjectDirs::from + data_dir() API stable across 5->6)
#     - rtrb           0.3.3 -> 0.3.4 (patch)
#   These are deliberate, not accidental drift.
#
# triple_buffer is held at 8.x: 9.0.0 moved to Rust edition 2024 and changed its API. 8.x is the
# latest release whose (Input, Output) + write/read API matches the smoke-test usage.
#
# rusqlite is held at 0.39: rusqlite_migration tops out at 2.5.0, which depends on rusqlite ^0.39
# (libsqlite3-sys 0.37). Pulling rusqlite 0.40 (libsqlite3-sys 0.38) makes two packages claim
# links="sqlite3" and the resolver rejects it. 0.39 aligns both on libsqlite3-sys 0.37.
# Revisit 0.40 when rusqlite_migration adds 0.40 support.
#
# assert_no_alloc uses features = ["warn_debug"] so the no-alloc violation test can catch the
# allocation via #[should_panic] (the default behavior aborts, which is not catchable).
#
# rusqlite carries the mandatory `bundled` feature (Pitfall 5): compiles SQLite from source so
# there is zero system dependency on Windows or macOS, preserving the single-binary promise.

[workspace]
resolver = "2"
members = [
    "crates/womanizer-core",
    "crates/womanizer-db",
    "crates/womanizer-app",
    "crates/womanizer-engine",
]

[workspace.dependencies]
# --- Core cross-thread plumbing (womanizer-core) ---
rtrb = "0.3.4"
triple_buffer = "8"
atomic_float = "1"
crossbeam-channel = "0.5"
assert_no_alloc = { version = "1", features = ["warn_debug"] }

# --- Persistence (womanizer-db) ---
rusqlite = { version = "0.39", features = ["bundled"] }
# Pin to 2.5 (latest): bare "2" resolves to 2.0.0 (rusqlite ^0.34); 2.5.0 depends on
# rusqlite ^0.39, matching our pin so both share libsqlite3-sys 0.37 (one links="sqlite3").
rusqlite_migration = "2.5"
directories = "6"

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Errors ---
thiserror = "2"
anyhow = "1"

# --- Logging (never from the audio callback) ---
tracing = "0.1"
tracing-subscriber = "0.3"

# --- Declared so the dep graph + license gate are real and INFRA-01 proves the ACTUAL
#     binary builds on both OSes (Open Question 2). NOT wired in Phase 0. ---
# Phase 1 (Plan 01-01): the cpal `audio_thread_priority` feature is OPTIONAL in cpal 0.17.3 and
# MUST be opted in explicitly here (D-20). Without this feature the audio callback thread is not
# promoted to RT priority (MMCSS "Pro Audio" on Win, time-constraint on Mac) and the < 50 ms
# latency budget is unreachable. CLAUDE.md's "automatic in 0.17.x" refers to the *availability*
# of the integration, not the default-feature state.
cpal = { version = "0.17", features = ["audio_thread_priority"] }
eframe = "0.34"
egui = "0.34"

# --- Phase 1 (Plan 01-01) audio I/O additions ---
# D-05 (revised): rubato runs the I/O-boundary sample-rate conversion. Pin EXACT patch 0.16.2 —
# rubato 1.0+ removed `FftFixedIn` for a new `Fft + FixedSync::Input` API (FINDING-3); 0.16.2 keeps
# the API the spec was written against (RESEARCH revision W7 — patch pin prevents silent 0.16.3+
# drift). MIT.
rubato = "0.16.2"
# D-19: VB-CABLE detection on Windows uses the strict case-insensitive regex
# `^CABLE Input \(VB-Audio Virtual Cable\)$`. Only consumed under cfg(target_os = "windows") by
# `womanizer-engine`. MIT/Apache-2.0.
regex = "1"

# --- Phase 2 (Plan 02-01) DSP additions ---
# EXACT-version pin (RESEARCH §Pitfall 2 / T-2-supply-chain): the wrapper is a thin Rust shim
# over a C++ phase vocoder where a future minor release could ship lazy-allocation inside
# `process()`. The leading `=` makes any upgrade a DELIBERATE, reviewed event — caret-allowed
# semver drift could silently break the `assert_no_alloc` contract the DSP worker depends on.
# MIT (verified crates.io 2025-09-18, colinmarc/signalsmith-stretch-rs). The build-dep
# bindgen ^0.70 requires libclang.dll at build time → README.md + .github/workflows/ci.yml
# install LLVM on the Windows builder (RESEARCH §Pitfall 3 / T-2-build-env).
signalsmith-stretch = "= 0.1.3"
# RESEARCH §Q7: CLAUDE.md's "wide = 0.7" pin is stale; 1.4 is the current canonical release.
# Compile-time SIMD primitives (f32x4/f32x8) for D-34 hot paths: RMS sum-of-squares, gate
# envelope follower, YIN difference function, signalsmith pre/post buffer copy. Triple-licensed
# `Zlib OR Apache-2.0 OR MIT` — all three already on the deny.toml allow-list. Stable Rust, no
# nightly, no build.rs.
wide = "1.4"
# D-32: YIN F0 estimator. `YINDetector::new(size, padding)` pre-allocates a BufferPool at
# construction so `get_pitch(...)` is allocation-free on the hot path (verified against the
# 0.3.0 source). MIT/Apache-2.0. Rejected alternative: aubio-rs is GPL-3.0 and would be
# denied by deny.toml — toxic for the permissive license posture (RESEARCH §Alternatives).
pitch-detection = "0.3"
