[package]
name = "womanizer-core"
version = "0.1.0"
edition = "2021"
# OtterBot-internal workspace crate — never published to crates.io. `publish = false` is accurate
# metadata and lets `cargo-deny` skip license evaluation for first-party crates ([licenses] private).
publish = false

# Cross-thread plumbing primitives + VoiceParams contract. No DB, no egui — must stay
# unit-testable in isolation (D-01). The `smoke` module (run_smoke_test harness) lands in
# Plan 02 against the contracts declared here.
[dependencies]
rtrb = { workspace = true }
triple_buffer = { workspace = true }
atomic_float = { workspace = true }
crossbeam-channel = { workspace = true }
assert_no_alloc = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
# The reusable smoke harness (Plan 02) returns anyhow::Result; pinned once in
# [workspace.dependencies]. thiserror remains the library error idiom; anyhow is used here
# for the harness's aggregate "any primitive failed to shuttle" result.
anyhow = { workspace = true }

# serial_test is used ONLY by this crate's no_alloc integration tests, which share the
# process-global assert_no_alloc violation counter. Cargo runs #[test]s in a binary in
# parallel by default; without serialization, a reset in one test can race the
# before/after snapshot in the other and flake. Pinned here (not in workspace.dependencies)
# because it has no other consumer in the workspace.
[dev-dependencies]
serial_test = "3"
