[package]
name = "womanizer-engine"
version = "0.1.0"
edition = "2021"
# OtterBot-internal workspace crate — never published to crates.io. `publish = false` is accurate
# metadata and lets `cargo-deny` skip license evaluation for first-party crates ([licenses] private).
publish = false

# Phase 1 (Plan 01-01): cpal audio I/O, the DSP worker thread (Phase 1 = memcpy passthrough;
# Phase 2+ = signalsmith), the rubato I/O-boundary resampler, per-OS virtual-device detection
# (VB-CABLE presence on Windows), the self-monitor stream +
# feedback-loop detector, and the off-RT event loop. Stays headless: no egui, no SQLite.
# womanizer-engine -> womanizer-core (D-01 dependency direction). Plans 01-02a/02b/03/04
# populate the module bodies; this plan only stands up the skeleton + workspace wiring.
[features]
# `test-injection` exposes EngineHandle::inject_error and the err_inject_tx Mutex<Producer>
# field so the AUDIO-09 reconnect integration test in tests/reconnect.rs can synthesize a
# DeviceFault without a real device disconnect. The feature is OFF in the shipped binary —
# both `womanizer-app` (production) and the integration test bring the feature in only via
# [dev-dependencies] (this crate's own test build automatically gets it; downstream crates'
# dev-dependency declarations must opt in explicitly).
test-injection = []

[dependencies]
womanizer-core = { path = "../womanizer-core" }
cpal = { workspace = true }
rubato = { workspace = true }
rtrb = { workspace = true }
triple_buffer = { workspace = true }
atomic_float = { workspace = true }
crossbeam-channel = { workspace = true }
assert_no_alloc = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Phase 2 (Plan 02-01) DSP additions — wired by the dsp.rs module skeleton in this plan
# and consumed by the worker loop body in plans 02-04..02-07. Versions are pinned ONCE in
# the workspace manifest (signalsmith-stretch = "= 0.1.3" exact-pin per Pitfall 2).
signalsmith-stretch = { workspace = true }
wide = { workspace = true }
pitch-detection = { workspace = true }

# regex is consumed ONLY by the Windows VB-CABLE detection module (devices/windows.rs)
# per D-19; cfg-gate it so non-Windows builds stay lean.
[target.'cfg(target_os = "windows")'.dependencies]
regex = { workspace = true }

# serial_test is used ONLY by this crate's no-alloc / RT-safety integration tests, which share
# the process-global assert_no_alloc violation counter. Cargo runs #[test]s in a binary in
# parallel by default; without serialization, a reset in one test can race the before/after
# snapshot in the other and flake. Same rationale as crates/womanizer-core/Cargo.toml lines
# 25-29 — pinned here (not in workspace.dependencies) because no other consumer.
#
# regex is moved into dev-dependencies (in addition to the Windows-cfg-gated production dep
# above) so the `devices::regex_tests` regex-assertion module in devices/mod.rs builds and
# runs on Linux / macOS dev hosts and CI — VALIDATION.md row DEVICE-04 (revision B2) names
# `devices::regex_tests::regex_matches` as the named test and it must be runnable everywhere.
# Dev-deps are only compiled for `cargo test`, so the shipped release binary is unaffected.
[dev-dependencies]
serial_test = "3"
regex = { workspace = true }

# Plan 02-04: dev-only rustfft + num-complex for the dsp_pitch_ratio integration test.
# rustfft 6.4 is already in the workspace dep tree as a transitive of pitch-detection 0.3
# (verified via Cargo.lock), so declaring it here as a dev-dep does not add a new
# top-level crate to the supply chain — it just makes the type available to test code.
# MIT/Apache-2.0; cargo-deny green. Test-only path → release binary is unaffected.
rustfft = "6"
num-complex = "0.4"

# The AUDIO-09 reconnect integration test requires the `test-injection` feature to call
# EngineHandle::inject_error. Run with `cargo test --features test-injection -p
# womanizer-engine --test reconnect`. Without the feature, the test target is skipped
# silently — the feature flag keeps inject_error out of the shipped production binary.
[[test]]
name = "reconnect"
required-features = ["test-injection"]
